--- a/package.json
+++ b/package.json
@@ -1,47 +1,94 @@
 {
 
   "name": "projectmanager",
+
   "version": "0.1.0",
+
   "private": true,
+
   "dependencies": {
+
     "@fortawesome/fontawesome-free": "^6.6.0",
+
     "body-parser": "^1.20.3",
+
     "cors": "^2.8.5",
+
     "dotenv": "^16.4.5",
+
+    "emailjs-com": "^3.2.0",
+
     "express": "^4.21.0",
+
     "nodemailer": "^6.9.15",
+
     "react": "^18.3.1",
+
     "react-dom": "^18.3.1",
+
     "react-scripts": "5.0.1",
+
     "web-vitals": "^2.1.4"
+
   },
+
   "scripts": {
+
     "start": "react-scripts start",
+
     "build": "react-scripts build",
+
     "test": "react-scripts test",
+
     "eject": "react-scripts eject",
+
     "predeploy": "npm run build",
+
     "deploy": "gh-pages -d build"
+
   },
+
   "eslintConfig": {
+
     "extends": [
+
       "react-app",
+
       "react-app/jest"
+
     ]
+
   },
+
   "browserslist": {
+
     "production": [
+
       ">0.2%",
+
       "not dead",
+
       "not op_mini all"
+
     ],
+
     "development": [
+
       "last 1 chrome version",
+
       "last 1 firefox version",
+
       "last 1 safari version"
+
     ]
+
   },
+
   "devDependencies": {
+
     "gh-pages": "^6.1.1"
+
   }
+
 }
+
