--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@
 
 # Если приложение развернуто не в корневой директории
 PUBLIC_URL=/
+
+# Переменные для EmailJS
+REACT_APP_EMAILJS_SERVICE_ID=service_wa9d4xj
+REACT_APP_EMAILJS_TEMPLATE_ID=template_4q7hatv
+REACT_APP_EMAILJS_USER_ID=n6oF9a_FFDgPU6VLy
