--- a/package.json
+++ b/package.json
@@ -20,11 +20,19 @@
 
     "express": "^4.21.0",
 
+    "i18next": "^23.16.1",
+
+    "i18next-browser-languagedetector": "^8.0.0",
+
+    "i18next-http-backend": "^2.6.2",
+
     "nodemailer": "^6.9.15",
 
     "react": "^18.3.1",
 
     "react-dom": "^18.3.1",
+
+    "react-i18next": "^15.0.3",
 
     "react-scripts": "5.0.1",
 
